--- a/styles.css
+++ b/styles.css
@@ -175,11 +175,12 @@ h3 {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 20px;
 }
 
 .locationTable {
   width: 90%;
-  padding: 5px;
+  padding: 10px;
 }
 
 .paragraphContainer {
